# back-end

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: .gitignore  main.py
app/classes/: bert_classifier.py  sentence_similarity.py
app/config/: config.py  constants.py
app/controllers/: dashboard.py  models.py  models_controller.py  news_controller.py  script.py  similarity.py  similarity_controller.py  tendencies_controller.py  veracity.py
app/models/: checked_news.py  google_tendencies.py  news.py  tendencies.py  text.py  twitter_tendencies.py  url.py
app/repositories/: factcheck_repository.py  news_repository.py  tendencies_repository.py
app/routers/: checked_news.py  dashboard.py  news.py  sentiment.py  similarity.py  tendencies.py  veracity.py
workflows/: linter.yml
